--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous">
 </head>
 
-<body>
+<body class="bg-light">
     <h1>Contact, Us!</h1>
 
     <form action="/contact-form" method="post">
